--- a/vue-todo/package.json
+++ b/vue-todo/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
+    "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "vue": "^3.4.25",
     "vue-class-component": "^8.0.0-0",
